# vinspect

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  colcon.pkg  package.xml  plugin_description.xml
.reuse/: dep5
cmake/: Findrocksdb.cmake
demo/config/: dense_demo.rviz
demo/data/: box.ply
demo/launch/: dense_demo.launch.py  sparse_demo.launch.py
include/vinspect/: inspection.hpp  sensors.hpp  sparse_mesh.hpp  utils.hpp
launch/: handheld.launch.py
ros2/vinspect_msgs/: CMakeLists.txt  package.xml
ros2/vinspect_msgs/.reuse/: dep5
ros2/vinspect_msgs/msg/: AreaData.msg  Settings.msg  Sparse.msg  Status.msg
ros2/vinspect_msgs/srv/: SaveDICONDE.srv
ros2/vinspect_ros2/: CMakeLists.txt
ros2/vinspect_ros2/.reuse/: dep5
ros2/vinspect_ros2/demo/config/: demo.rviz  dense_demo.rviz
ros2/vinspect_ros2/demo/data/: camera_1.stl
ros2/vinspect_ros2/demo/launch/: sparse_demo.launch.py
ros2/vinspect_ros2/launch/: handheld.launch.py
ros2/vinspect_ros2/scripts/: load_and_publish.py  pose_marker.py  selection_marker.py
ros2/vinspect_ros2/src/: node.cpp  vinspect_parameters.yaml
ros2/vinspect_rviz_plugins/: CHANGELOG.rst  CMakeLists.txt  package.xml
ros2/vinspect_rviz_plugins/src/: area_panel.hpp  settings_panel.cpp  settings_panel.hpp  status_panel.cpp  status_panel.hpp
scripts/: dummy_publisher.py  load_rosbag.py
src/: area_panel.cpp  dense.proto  inspection.cpp  node.cpp  python_bindings.cpp  settings_panel.cpp  settings_panel.hpp  sparse_mesh.cpp  status_panel.cpp  utils.cpp
srv/: StartReconstruction.srv
vinspect/: CMakeLists.txt  package.xml
vinspect/.reuse/: dep5
vinspect/include/vinspect/: inspection.hpp  utils.hpp
vinspect/include/vinspect/pose_tree/: .gitrepo  README.md  octree.h
vinspect/scripts/: load_data_example.py
vinspect/src/: inspection.cpp  sparse_mesh.cpp
vinspect_ros2/demo/launch/: dense_demo.launch.py
