<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vinspect_ros2</name>
  <version>0.0.0</version>
  <description>ROS2 interface for the Vinspect software.</description>
  <maintainer email="marc.bestmann@dlr.de">Marc Bestmann</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>backward_ros</depend>
  <depend>cv_bridge</depend>
  <depend>generate_parameter_library</depend>
  <depend>message_filters</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_ros</depend>
  <depend>vinspect_msgs</depend>
  <depend>vinspect</depend>
  <depend>visualization_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
