<package format="2">
  <name>vinspect</name>
  <description>Inpsection data recording and visualization.</description>

  <version>0.1.0</version>

  <maintainer email="marc.bestmann@dlr.de">Marc Bestmann</maintainer>

  <author email="marc.bestmann@dlr.de">Marc Bestmann</author>
  <author email="lewe.christansen@dlr.de">Lewe Christiansen</author>

  <license>MIT</license>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>librocksdb-dev</depend>
  <depend>libopencv-dev</depend>
  <depend>nlohmann-json-dev</depend>
  <depend>fmt</depend>
  <depend>pybind11-dev</depend>
  <depend>git</depend>
  <depend>backward_ros</depend>
  <depend>protobuf</depend>
  <depend>eigen</depend>
  <depend>tbb</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>