<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vinspect_rviz_plugins</name>
  <version>0.1.0</version>
  <description>RViz2 Plugins for the Vinspect Software.</description>
  <maintainer email="lewe.christiansen@dlr.de">Marc Bestmann</maintainer>
  <author email="lewe.christiansen@dlr.de">Lewe Christiansen</author>
  <author email="marc.bestmann@dlr.de">Marc Bestmann</author>
  <license>MIT</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>qt5-qmake</build_depend>

  <exec_depend>libqt5-core</exec_depend>

  <depend>libqt5-widgets</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rviz2</depend>
  <depend>rviz_common</depend>
  <depend>rviz_rendering</depend>
  <depend>rviz_default_plugins</depend>    
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>vinspect_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <rviz plugin="plugin_description.xml"/>
    <build_type>ament_cmake</build_type>
  </export>
</package>
